# noki

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/superpowers/plans/: 2026-07-02-noki-mvp.md  2026-07-03-cli-title-and-labels.md  2026-07-03-colored-labels-in-list.md  2026-07-03-daily-note-command.md  2026-07-03-edit-note-command.md  2026-07-03-fetch-rebase-before-push.md  2026-07-03-markdown-parser.md  2026-07-05-flat-filename-template.md  2026-07-05-format-show-markdown-body.md  2026-07-05-noki-agent-skills.md  2026-07-05-refresh-command.md  2026-07-06-shell-completion-paths.md  2026-07-14-ignore-sigint-piped-stdin.md  2026-07-14-slug-length-cap.md  2026-07-15-daily-testability-and-module-layout.md  2026-07-15-global-config-flag.md
docs/superpowers/specs/: 2026-07-05-noki-agent-skills-design.md  2026-07-13-global-config-flag-design.md  2026-07-14-slug-length-cap-design.md
skills/capturing-notes/: SKILL.md
skills/capturing-notes/evals/: evals.json
skills/retrieving-notes/: SKILL.md
skills/retrieving-notes/evals/: evals.json
src/: cli.rs  completion.rs  config.rs  editor.rs  io.rs  label.rs  lib.rs  main.rs  note.rs  output.rs  template.rs
src/commands/: create.rs  daily.rs  edit.rs  list.rs  mod.rs  refresh.rs  show.rs
src/render/: inline.rs  mod.rs  table.rs  wrap.rs
src/vcs/: git.rs  mod.rs
