[package]
name = "noki"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A version control powered, AI friendly note taking app"
repository = "https://github.com/paulvandermeijs/noki"
readme = "README.md"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap-verbosity-flag = "3.0"
gix = { version = "0.85", default-features = false, features = ["blocking-network-client", "worktree-mutation", "sha1"] }
git2 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
toml = "1.1"
chrono = "0.4"
tabled = "0.21"
slug = "0.1"
directories = "6.0"
tempfile = "3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
