[package]
name = "noki"
version = "1.1.0"
edition = "2024"
license = "MIT"
description = "A version control powered, AI friendly note taking app"
repository = "https://github.com/paulvandermeijs/noki"
readme = "README.md"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap-verbosity-flag = "3.0"
gix = { version = "0.85", default-features = false, features = ["blocking-network-client", "worktree-mutation", "sha1"] }
git2 = { version = "0.21", features = ["ssh", "https", "vendored-libgit2", "vendored-openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
toml = "1.1"
chrono = "0.4"
tabled = { version = "0.21", features = ["ansi"] }
slug = "0.1"
directories = "6.0"
tempfile = "3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
markdown = "1.0"
terminal_size = "0.4"
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
